# belalang

./: .bazelrc  .gitignore  .rustfmt.toml  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  MODULE.bazel  README.md  flake.nix  shell.nix  test-cmp.mlir  test.bel
.cargo/: config.toml
.github/workflows/: ci.yml  (+1 more)
ast/: BUILD.bazel
ast/src/: dump.rs  expressions.rs  lib.rs  parser.rs  program.rs  statements.rs  type_inferer.rs  visitor.rs
bbuild/: BUILD.bazel
bbuild/src/: lib.rs
belalang_ir/: BUILD.bazel
bir/: BUILD.bazel
bir/birgen2/: BIRGen2.cpp  BIRGen2.h  birgen2.cpp  birgen2.h  lib.rs
bir/include/belalang/: Passes.h  Passes.td
bir/include/belalang/BIR/: BRTUtils.h  Passes.h  Passes.td
bir/include/belalang/BIR/CodeGen/: BIRGen.h
bir/include/belalang/BIR/IR/: BIR.h  BIRAttrs.td  BIRDialect.td  BIREnumAttrs.td  BIROps.td  BIRTypes.h  BIRTypes.td  Builder.h
bir/include/belalang/IR/: BIRDialect.h  BIRTypes.h  BIRTypes.td  Builder.h
bir/lib/: Passes.cpp  Pipelines.cpp
bir/lib/CodeGen/: BIRGen.cpp
bir/lib/IR/: BIRAttrs.cpp  BIRDialect.cpp  BIROps.cpp  BIRTypes.cpp  Builder.cpp
bir/lib/Interfaces/: LoopOpInterface.cpp
bir/lib/Transforms/: BIRToLLVM.cpp  Constantize.cpp  FlattenCFG.cpp  LowerDeclToMemory.cpp  LowerFuncExpr.cpp  LowerPrintToRuntime.cpp  LowerToRuntimeCalls.cpp  PrepareRuntime.cpp  Runtimize.cpp
bir/src/: lib.rs
bir/test/: constantize.mlir
bir/tools/bir-opt/: bir-opt.cpp
bir/tools/bir-tblgen/: CXXBindingDecls.cpp  CXXBindingDefs.cpp  CXXBindings.cpp  RustBindings.cpp  TableGenBackends.h  Utils.h  bir-tblgen.cpp
bir/tools/bir-translate/: bir-translate.cpp
birgen/: BIRGen.cpp  BUILD.bazel  lib.rs
birgen/include/belalang/BIRGen/: BIRGen.h
birgen/lib/: BIRGen.cpp
birgen/src/: lib.rs
brt/: BUILD.bazel
brt/belalang_bytecode/: BUILD.bazel
brt/belalang_gc/src/: gc.rs  lib.rs  space.rs
brt/belalang_vm/: BUILD.bazel
brt/belalang_vm/dev_tools/: buf.rs
brt/belalang_vm/src/: errors.rs  lib.rs
brt/belalang_vm/src/stack/: unix.rs
brt/belalang_vm/tests/testsuite/: string.rs
brt/core/: BUILD.bazel
brt/core/dev_tools/: vm.rs
brt/core/examples/: addition.rs  print_string.rs  write_file.rs
brt/core/include/belalang/BRT/: BRT.h
brt/core/src/: lib.rs  static.rs  string.rs
brt/core/src/bytecode/: opcode.rs
brt/core/src/gc/: freelist.rs
brt/core/src/mmtk/: mod.rs
brt/core/src/vm/: core.rs
brt/core/tests/: main.rs
brt/core/tests/gc_tests/: main.rs
brt/core/tests/testsuite/: boolean.rs  jump_op.rs  number.rs  stack_op.rs  string.rs
brt/dev_tools/: lib.rs
brt/examples/: print_string.rs  write_file.rs
brt/include/belalang/BRT/: BRT.h
brt/src/: brt.c  lib.rs
brt/src/bytecode/: dis.rs
brt/src/gc/: gc.rs  mod.rs  mutator.rs
brt/src/gc/mem/: windows.rs
brt/src/vm/: errors.rs  heap.rs  mod.rs
brt/src/vm/stack/: mod.rs  windows.rs
brt/tests/gc_tests/: main.rs
brt/tests/testsuite/: boolean.rs  jump_op.rs  main.rs
cli/: BUILD.bazel
cli/src/: main.rs
crates/belalang_cli/: BUILD.bazel  Cargo.toml
crates/belalang_cli/src/: main.rs
crates/belalang_gc/: BUILD.bazel  Cargo.toml
crates/belalang_gc/src/: freelist.rs
crates/belalang_gc/src/mem/: mod.rs  unix.rs
crates/belalang_gc/tests/testsuite/: main.rs
crates/belalang_ir/: BUILD.bazel  CMakeLists.txt  Cargo.toml  build.rs
crates/belalang_ir/include/: CMakeLists.txt
crates/belalang_ir/include/belalang_ir/: CMakeLists.txt  Dialect.h  Ops.td  Passes.h  Passes.td  test.h
crates/belalang_ir/include/belalang_ir/IR/: BIRDialect.h  BIROps.td  BIRTypes.td  Dialect.h  Dialect.td  Ops.td
crates/belalang_ir/lib/: CMakeLists.txt  Dialect.cpp  Passes.cpp
crates/belalang_ir/lib/IR/: BIRDialect.cpp
crates/belalang_ir/lib/Transforms/: Constantize.cpp  LowerPrint.cpp  Runtimize.cpp
crates/belalang_ir/lib/belalang_ir/: test.cpp
crates/belalang_ir/src/: lib.rs
crates/belalang_ir/test/: BUILD.bazel  basic.mlir  constantize.mlir  lit.cfg.py  print.mlir  run_lit.py
crates/belalang_ir/tools/: CMakeLists.txt
crates/belalang_ir/tools/bir-opt/: CMakeLists.txt  bir-opt.cpp
crates/belalang_lexer/: BUILD.bazel  Cargo.toml
crates/belalang_vm/: BUILD.bazel  Cargo.toml
crates/belalang_vm/examples/: addition.rs  print_string.rs  write_file.rs
crates/belalang_vm/src/: core.rs  errors.rs  heap.rs  io.rs  lib.rs  stack.rs
crates/belalang_vm/src/objectmodel/: mod.rs  string.rs
crates/belalang_vm/src/stack/: mod.rs
crates/belalang_vm/tests/testsuite/: boolean.rs  jump_op.rs  number.rs  stack_op.rs
devtools/belalang_dev_tools/: BUILD.bazel  Cargo.toml
devtools/belalang_dev_tools/interactive/: lexer.rs  parser.rs
devtools/belalang_dev_tools/src/: vm.rs
devtools/btest/: BUILD.bazel  Cargo.toml  defs.bzl  run_test.sh
devtools/btest/src/: main.rs
diag/: BUILD.bazel
docs/: BUILD.bazel  book.toml
examples/: addition.rs  collatz.bel  fibonacci.bel  fizzbuzz.bel  gcd.bel  write_file.rs
include/: BUILD.bazel
include/belalang/BIR/CodeGen/: BIRGen.h
include/belalang/BIR/IR/: BIRDialect.td  BIROps.td  BIRTypes.td
include/belalang/BIR/Interfaces/: LoopOpInterface.h  LoopOpInterface.td
include/belalang/BIRGen/: BIRGen.h
include/belalang/LLVMGen/: LLVMGen.h
include/belalang/Lexer/: Lexer.hpp
lexer/: BUILD.bazel
lexer/src/: dump.rs  lexer.rs  lib.rs
lexer/tests/testsuite/: main.rs
llvmgen/: BUILD.bazel  LLVMGen.cpp  lib.rs
pkg/: BUILD.bazel  utils.bzl
session/: BUILD.bazel
span/: BUILD.bazel
src/: main.rs
tests/: BUILD.bazel  CMakeLists.txt  TestLexer.cpp  lit.bzl  lit.cfg.py  run_lit.py
tests/Belalang/: BUILD.bazel  lit.cfg.py  run_lit.py
tests/Tokens/: BUILD.bazel  basic.bel  booleans.bel  import.bel  invalid-hex-escape.bel  loop-control.bel  structs.bel  token-dot.bel  tokens-all.bel  tokens-floats.bel  tokens-identifiers.bel  tokens-integers.bel  tokens-strings.bel  type-annotation.bel  unclosed-string.bel  unknown-escape.bel  unknown-tokens.bel  update.py
tools/bir-translate/: BUILD.bazel  bir-translate.cpp
ty/: BUILD.bazel
ty/src/: lib.rs
(+203 files in other folders)
