[workspace]
resolver = "3"
members = ["crates/*", "devtools/*", "vm/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Vito Secona <secona00@gmail.com>"]

[workspace.lints.clippy]
self_named_module_files = "deny"
ptr_as_ptr = "deny"
manual_assert = "deny"

[workspace.dependencies] # keep-sorted start
belalang_ast = { path = "./crates/belalang_ast" }
belalang_dev_tools = { path = "./devtools/belalang_dev_tools" }
belalang_lexer = { path = "./crates/belalang_lexer" }
belvm = { path = "./vm/belvm" }
belvm_bytecode = { path = "./vm/belvm_bytecode" }
belvm_gc = { path = "./vm/belvm_gc/" }
belvm_macros = { path = "./vm/belvm_macros" }
belvm_std = { path = "./vm/belvm_std" }
bincode = "2.0.1"
clap = "4.5.4"
crc32fast = "1.5.0"
libc = "0.2.177"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0.219"
syn = "2.0"
thiserror = "2.0.0"
unicode-ident = "1.0.18"
windows-sys = "0.61.2"
# keep-sorted end
