[workspace]
resolver = "3"
members = ["crates/*", "devtools/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Vito Secona <secona00@gmail.com>"]

[workspace.lints.clippy]
self_named_module_files = "deny"
ptr_as_ptr = "deny"
manual_assert = "deny"

[workspace.dependencies] # keep-sorted start
belalang_ast = { path = "./crates/belalang_ast" }
belalang_bytecode = { path = "./crates/belalang_bytecode" }
belalang_dev_tools = { path = "./devtools/belalang_dev_tools" }
belalang_gc = { path = "./crates/belalang_gc/" }
belalang_lexer = { path = "./crates/belalang_lexer" }
belalang_macros = { path = "./crates/belalang_macros" }
belalang_std = { path = "./crates/belalang_std" }
belalang_vm = { path = "./crates/belalang_vm" }
bincode = "2.0.1"
clap = "4.5.4"
crc32fast = "1.5.0"
libc = "0.2.177"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0.219"
syn = "2.0"
thiserror = "2.0.0"
unicode-ident = "1.0.18"
windows-sys = "0.61.2"
# keep-sorted end
