module(
    name = "belalang",
    version = "0.0.0",
)

# ------------------------------------------------------------------------------
# Dependencies
# ------------------------------------------------------------------------------

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_rust_mdbook", version = "0.70.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "llvm", version = "0.8.3")
bazel_dep(name = "cxx.rs", version = "1.0.194")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "rules_python", version = "2.0.1", dev_dependency = True)

# The original hedron_compile_commands does not support Bazel v9.x.x
git_override(
    module_name = "hedron_compile_commands",
    commit = "26a1ba52bd76aa3d95fa7278a9696d51f7946612",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
)

# ------------------------------------------------------------------------------
# lit
# ------------------------------------------------------------------------------

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_3_11_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pypi")

# ------------------------------------------------------------------------------
# Third Parties
# ------------------------------------------------------------------------------

third_party = use_extension("//third_party:defs.bzl", "third_party_deps")
use_repo(third_party, "bdwgc")

# ------------------------------------------------------------------------------
# LLVM
# ------------------------------------------------------------------------------

llvm_source = use_extension("@llvm//extensions:llvm_source.bzl", "llvm_source")
llvm_source.version(llvm_version = "22.1.4")
use_repo(llvm_source, "llvm-raw", "llvm_config", "llvm_zlib", "llvm_zstd")

llvm = use_extension("@llvm//extensions:llvm.bzl", "llvm")
llvm.configure(targets = [
    "X86",
])
use_repo(llvm, "llvm-project")

register_toolchains("@llvm//toolchain:all")

# ------------------------------------------------------------------------------
# Rust
# ------------------------------------------------------------------------------

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["nightly/2026-01-22"],
)
use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "anyhow",
    version = "1.0.100",
)
crate.spec(
    package = "libc",
    version = "0.2.177",
)
crate.spec(
    package = "unicode-ident",
    version = "1.0.18",
)
crate.spec(
    package = "annotate-snippets",
    version = "0.12.16",
)
crate.spec(
    package = "lexopt",
    version = "0.3.2",
)
crate.spec(
    package = "bumpalo",
    version = "3.20.3",
)
crate.from_specs()
use_repo(crate, "crates")

register_toolchains("@rust_toolchains//:all")
