module(
    name = "belalang",
    version = "0.0.0",
)

# ------------------------------------------------------------------------------
# Dependencies
# ------------------------------------------------------------------------------

bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_rust", version = "0.71.3")
bazel_dep(name = "rules_rust_mdbook", version = "0.71.3")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "llvm", version = "0.8.3")
bazel_dep(name = "cxx.rs", version = "1.0.196")

# required by llvm
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "zlib-ng", version = "2.3.3", repo_name = "llvm_zlib")
bazel_dep(name = "zstd", version = "1.5.7.bcr.1", repo_name = "llvm_zstd")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "rules_python", version = "2.0.1", dev_dependency = True)

# The original hedron_compile_commands does not support Bazel v9.x.x
git_override(
    module_name = "hedron_compile_commands",
    commit = "26a1ba52bd76aa3d95fa7278a9696d51f7946612",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
)

# ------------------------------------------------------------------------------
# lit
# ------------------------------------------------------------------------------

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_3_11_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pypi")

# ------------------------------------------------------------------------------
# Third Parties
# ------------------------------------------------------------------------------

third_party = use_extension("//third_party:defs.bzl", "third_party_deps")
use_repo(third_party, "bdwgc", "llvm-raw")

llvm_configure = use_repo_rule("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")

llvm_configure(
    name = "llvm-project",
    targets = [
        "X86",
    ],
)

# ------------------------------------------------------------------------------
# C++ Toolchain
# ------------------------------------------------------------------------------

register_toolchains("@llvm//toolchain:all")

# ------------------------------------------------------------------------------
# Rust
# ------------------------------------------------------------------------------

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.96.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# ------------------------------------------------------------------------------
# External Crates
# ------------------------------------------------------------------------------

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "anyhow",
    version = "1.0.100",
)
crate.spec(
    package = "libc",
    version = "0.2.177",
)
crate.spec(
    package = "unicode-ident",
    version = "1.0.18",
)
crate.spec(
    package = "annotate-snippets",
    version = "0.12.16",
)
crate.spec(
    package = "lexopt",
    version = "0.3.2",
)
crate.spec(
    package = "bumpalo",
    version = "3.20.3",
)
crate.spec(
    package = "bitflags",
    version = "2.13.0",
)
crate.from_specs()
use_repo(crate, "crates")
