load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
	name = "ast",
	srcs = glob(["src/*.rs"]),
	deps = [
		"//diag",
		"//lexer",
		"//session",
		"//span",
		"@crates//:bumpalo",
		"@crates//:thiserror",
	],
	visibility = ["//visibility:public"],
)

rust_test(
	name = "ast-test",
	crate = ":ast",
)
