load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "bbuild",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//bir",
        "//birgen",
        "//diag",
        "//ast",
        "//lexer",
        "//session",
        "@crates//:anyhow",
    ],
)
