load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "bbuild",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//birgen",
        "//llvmgen",
        "//diag",
        "//ast",
        "//lexer",
        "//session",
        "//ty",
        "@crates//:anyhow",
    ],
    link_deps = [
        "//bir",
        "//llvmgen:llvmgen-cc",
    ],
)
