load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

# ------------------------------------------------------------------------------
# BIR CodeGen
# ------------------------------------------------------------------------------

cc_library(
    name = "bir_codegen-cc",
    srcs = [
        "lib/CodeGen/BIRGen.cpp",
    ],
    deps = [
        ":bir",
        "//include:BIR-CodeGen",
        "//birgen:birgen-bridge/include",
        "@cxx.rs//:core",
        "@llvm-project//mlir:IR",
    ],
)

# ------------------------------------------------------------------------------
# BIR
# ------------------------------------------------------------------------------

cc_library(
    name = "bir",
    srcs = [
        "lib/IR/BIRAttrs.cpp",
        "lib/IR/BIRDialect.cpp",
        "lib/IR/BIROps.cpp",
        "lib/IR/BIRTypes.cpp",
        "lib/Pipelines.cpp",
        "lib/Interfaces/LoopOpInterface.cpp",
        "lib/Transforms/LowerDeclToMemory.cpp",
        "lib/Transforms/LowerToRuntimeCalls.cpp",
        "lib/Transforms/FlattenCFG.cpp",
        "lib/Transforms/LowerFuncExpr.cpp",
        "lib/Transforms/BIRToLLVM.cpp",
    ],
    deps = [
        "//include:BIR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:FunctionInterfaces",
        "@llvm-project//mlir:ControlFlowDialect",
        "@llvm-project//mlir:LLVMDialect",
        "@llvm-project//mlir:ControlFlowToLLVM",
        "@llvm-project//mlir:TransformUtils",
    ],
)
