load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@cxx.rs//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "birgen-cc",
    srcs = ["lib/BIRGen.cpp"],
    hdrs = ["include/belalang/BIRGen/BIRGen.h"],
    includes = ["include"],
    alwayslink = True,
    deps = [
        ":birgen-bridge/include",
        "//bir",
        "@cxx.rs//:core",
        "@llvm-project//mlir:BuiltinToLLVMIRTranslation",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:LLVMDialect",
        "@llvm-project//mlir:LLVMToLLVMIRTranslation",
        "@llvm-project//llvm:AllTargetsAsmParsers",
    ],
    linkopts = select({
        "@platforms//os:macos": ["-lc++"],
        "//conditions:default": [],
    }),
)

rust_cxx_bridge(
    name = "birgen-bridge",
    src = "src/lib.rs",
    deps = [":birgen-cc"],
)

rust_library(
    name = "birgen",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        ":birgen-bridge",
        ":birgen-cc",
        "//bir",
        "//ast",
        "//lexer",
        "@crates//:cxx",
    ],
)

rust_test(
    name = "birgen_test",
    crate = ":birgen",
)
