load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@cxx.rs//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

package(default_visibility = ["//visibility:public"])

rust_cxx_bridge(
    name = "birgen-bridge",
    src = "src/lib.rs",
    deps = ["//bir:bir_codegen-cc"],
)

rust_library(
    name = "birgen",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//ast",
        "//lexer",
        "//session",
        "@cxx.rs//:cxx",
    ],
    link_deps = [
        ":birgen-bridge",
        "//bir",
        "//bir:bir_codegen-cc",
    ],
)

rust_test(
    name = "birgen_test",
    crate = ":birgen",
)
