load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@cxx.rs//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "birgen-cc",
    srcs = ["BIRGen.cpp"],
    deps = [
        "//bir",
        "//include:BIRGen",
        ":birgen-bridge/include",
        "@cxx.rs//:core",
        "@llvm-project//mlir:IR",
    ],
)

rust_cxx_bridge(
    name = "birgen-bridge",
    src = "lib.rs",
    deps = [":birgen-cc"],
)

rust_library(
    name = "birgen",
    srcs = ["lib.rs"],
    deps = [
        "//ast",
        "//lexer",
        "//session",
        "//ty",
        "@cxx.rs//:cxx",
    ],
    link_deps = [
        ":birgen-bridge",
        ":birgen-cc",
    ],
)

rust_test(
    name = "birgen_test",
    crate = ":birgen",
)
