load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "belalang",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//bbuild",
        "//bir",
        "//birgen",
        "//diag",
        "//ast",
        "//lexer",
        "//session",
        "@crates//:lexopt",
        "@crates//:anyhow",
    ],
)
